[package]
name = "git-ignore"
version = "0.1.0"
authors = ["draveness <i@draveness.me>"]
edition = "2018"
description = "Manages gitignore files"
license = "LICENSE"
repository = "https://github.com/draveness/git-ignore"
homepage = "https://github.com/draveness/git-ignore"

[dependencies]
reqwest = "0.9.10"
colored = "1.7"
clap    = "2.32.0"