[package]
name = "git-ignore-manager"
version = "0.2.0"
authors = ["draveness <i@draveness.me>"]
edition = "2018"
description = "Manages gitignore files"
license-file = "LICENSE"
repository = "https://github.com/draveness/git-ignore"
homepage = "https://github.com/draveness/git-ignore"
readme = "README.md"

[[bin]]
name = "git-ignore"
path = "src/main.rs"

[dependencies]
reqwest = "0.9.10"
colored = "1.7"
clap    = "2.32.0"